--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4.4.0"
 reqwest = "0.11.23"
 serde = { version = "1.0.193", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+config = "0.13"
 
 [dependencies.sqlx]
 version = "0.7"
